torrent-stack/glueten/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gluetun
  namespace: torrent-stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gluetun
  template:
    metadata:
      labels:
        app: gluetun
    spec:
      containers:
        - name: gluetun-protonvpn
          image: qmcgaw/gluetun:latest
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          ports:
            - containerPort: 8112
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /tmp/gluetun
            - name: downloads
              mountPath: /media_drive
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: gluetun-config-pvc
        - name: downloads
          persistentVolumeClaim:
            claimName: gluetun-samba-pvc
